--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "validator": "^13.15.15"
   }
 }
