--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.2",
+    "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3",
+    "react-router-dom": "^7.6.2",
     "validator": "^13.15.15"
   }
 }
